--- a/index.html
+++ b/index.html
@@ -85,6 +85,56 @@
     </nav>
   </header>
   <footer>
+
+      <div class="container-d d-flex justify-content-center ml-0">
+          <div class="row w-100 px-4 py-4">
+  
+              <div class="flex-item d-flex col-sm-12 col-md-12 col-lg-9 row ">
+                  <div class="col-6  col-md-4 col-lg-2 ">
+                      <img src="AutoMobility-New-Logo.png">
+                  </div>
+                  <div class="col-6  col-md-4 col-lg-2 ">
+                      <a href="#" class="footer-links"><i class="fas fa-globe-americas"></i>
+                  Find Your Country 
+                  </a>
+                  </div>
+                  <div class="col-6  col-md-4 col-lg-2 ">
+                      <a href="#" class="footer-links">
+                  Contact Us
+                  </a>
+                  </div>
+                  <div class="col-6  col-md-4 col-lg-2 ">
+                      <a href="#" class="footer-links">
+                Site Map
+                  </a>
+                  </div>
+                  <div class="col-6  col-md-4 col-lg-2 ">
+                      <a href="#" class="footer-links">
+                  Careers
+                  </a>
+                  </div>
+                  <div class="col-6  col-md-4 col-lg-2 ">
+                      <a href="#" class="footer-links">
+                  Espanol
+                  </a>
+                  </div>
+              </div>
+  
+  
+              <div class="flex-item col-xs-12 col-sm-12 col-md-6 col-lg-3 px-0 pt-3">
+                  <div class="w-100 input-group md-form form-sm form-1 pl-0">
+                      <div class="input-group-prepend">
+                          <span class="input-group-text purple lighten-3" id="basic-text1"><i class="fas fa-search "></i></span>
+                      </div>
+                      <input class="form-control my-0 py-1" type="text">
+                      <button type="button" class="btn btn-search  white-gradient font-weight-bold">SEARCH</button>
+                  </div>
+              </div>
+          </div>
+      </div>
+  
+
+<!--     
     <div class="dark-grey">
       <div class="container-fluid py-4 px-5">
         <div class="row">
@@ -122,7 +172,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="footer">
       
