--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       </div>
     </nav>
   </header>
+   <h1 class="text-white text-center m-5">REQUEST INFO</h1>
   <main class="container info">
   <form>
   <div class="container">
@@ -420,7 +421,7 @@
   </div>
   <div class="container socials">
       <div class="row">
-          <span class="col-6">FOLLOW US</span>
+          <span class="col-6 ">FOLLOW US</span>
           <span class="col-6">SUPPORT</span>
           <span class="col-6"><i class="fab fa-facebook-square"></i>
               <i class="fab fa-twitter-square"></i>
