make corection in a list

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <option value="Wyoming-WY"></option>
             </datalist>
 
-            <input class="col-5 m-2 p-2" list="vehicles" placeholder="Your vehicle is here">
+            <input class="col-5 m-2 p-2" list="vehicles" placeholder="What is your dream vehicle?">
             <datalist id="vehicles">
               <option value="All-New Wrangler"></option>
               <option value="Grand Cherokee"></option>
@@ -162,7 +162,7 @@
               <option value="Renegade"></option>
               <option value="ALL-New Gladiator Coming Spring 2019"></option>
             </datalist>
-            <input class="col-5 m-2 p-2" type="text" placeholder="Describe here how you see your futures vehicle">
+            <input class="col-5 m-2 p-2" type="text" placeholder="Describe the features of your dream vehicle">
             
             <button type="button" class="button" onclick="alert('Thank you! We will contact you as soon as possible!')">Submit!</button>
           
@@ -423,7 +423,7 @@
       <div class="row">
           <span class="col-6 ">FOLLOW US</span>
           <span class="col-6">SUPPORT</span>
-          <span class="col-6"><i class="fab fa-facebook-square"></i>
+          <span class="col-6 pr-2"><i class="fab fa-facebook-square"></i>
               <i class="fab fa-twitter-square"></i>
               <i class="fab fa-instagram"></i>
               <i class="fab fa-google-plus-square"></i>
